--- a/html/exo1.html
+++ b/html/exo1.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <button id="button">Clic !</button>
+    <button id="btn">Clic !</button>
     <div id="times">
         On a cliqué
         <span id="counter">0</span>
@@ -17,5 +17,4 @@
     </div>
     <script src="../js/exo1.js"></script>
 </body>
-
 </html>
